# binance-algo-trading-bot

./: .env  .env.example  .gitignore  Cargo.toml  README.md  config.toml  docker-compose.yml
docs/: README.md
init-db/: init.sql
src/: database_logic.rs  main.rs  mod.rs
src/analysis/: analysis.rs  mod.rs
src/backtest/: mod.rs  sma_cross_analysis.rs  sma_crossover_backtest.rs  utils.rs
src/database_logic/: db_connect.rs  db_crud.rs  db_objects.rs  db_tables.rs
src/network/: mod.rs
src/network/api/: market.rs
src/network/websocket/: market-stream.rs  market_stream.rs
src/strategy/: sma.rs
src/trading_simulation/: mod.rs  run_simulation.rs  trade_analysis_report.rs
src/trading_simulation/database/: connection.rs  crud.rs  mod.rs  objects.rs  tables.rs
src/trading_simulation/network/api/: market.rs
src/trading_simulation/network/websocket/: market_stream.rs  mod.rs
src/trading_simulation/strategy/: sma.rs  sma_crossover.rs
src/utils/: config.rs  data_io.rs  mod.rs  objects.rs
