[package]
name = "api_binance"
version = "0.1.0"
edition = "2024"

[dependencies]
binance_spot_connector_rust = { version = "1.3.0", features = ["enable-hyper"] }
tokio = { version = "1.45.0", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.27"
serde_json = "1.0.140"
tokio-cron-scheduler = "0.14.0"
tokio-tungstenite = {version = "0.26.2", features = ["native-tls"]}
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.30"
url = "2.3"
bytes = "1.10.1"
anyhow = "1.0.98"
